Fixed issue with news emojis inserting with wrong size, removed emojis.js after moving functions to other files

--- a/static/css/news.css
+++ b/static/css/news.css
@@ -393,6 +393,10 @@ p {
     display: flex;
 }
 
+.custom-emoji {
+    cursor: pointer;
+}
+
 .unicode-emoji-button {
     background-color: transparent;
     padding: 0;
@@ -516,8 +520,8 @@ p {
 
 .custom-emoji-drawer {
     position: absolute;
-    max-height: 440px;
-    min-width: 400px;
+    max-height: 400px;
+    min-width: 420px;
     z-index: 1000;
     top: 80px;
     left: 340px;
@@ -537,7 +541,7 @@ p {
     top: calc(100% + 4px);
     right: 0;
     max-height: 400px;
-    min-width: 390px;
+    min-width: 420px;
     z-index: 1200;
     overflow-y: auto;
     display: flex;
